' Generated by UML Generator
' Encoded: fLbjRzis4FwUNo7qax8uHLDiws1qHktONWoaJU2NTkWm3BJ4n5naKg0efsxH_lRTaH95KdAIjHlGMlV6u_7kkIFxfb14gdAR7HLtZET4acsKPAGeXaf9jYuLdIM2BzXd6hqush2KHWcJIKQFZhHKDCppjuJnwCjH59ry0MEA9L-ZBP1Y8c-BVhG0C_pshx-F-z5EiFJeQwqvPHaTYtkU2PAU2wwao38gjQ7J6vKlgDonXFQZgSfNhFf2tYckrAqS7z8xHfsqaaVT-0R-u6HBQmTxKK6BWWdUZouKMj4VlKZI8XUye3LPxZAgvXNnm9wISakvgdO2b5bQhu8Ky8BA2KGeSwaezyxnHqjATiiuoJ3w_IWJXfg8RGvU5JJrwMMEcniJ1RHBaP0CVoxPDWoQyIu-Rb7QZlMYqArUr7PAMxgbQggt6XyxMpWfBDaFH1qvetbbLsvfEwosVxwLQULhfmUQ4UucyCBP6Tge0gkzS5aT4V3id7i755WAc5s7wLjRsMD5I-71eab7uc0Ej39rLTIrHiDKB875WrJCGUTUI2-H4qd1UZfK7Vb6aWGhQ9rH37unIm49BbcXNXlrWSr9zCFaelv5_VGBNUb5eIDrydLdZw7ImpcpgXPeQLf6w8AlVrsvqzAtZ9R3VgxKCJnqk8t0eN3x1eUjm6lBVkZHS8VWOuVch1JKzRXZTpbygs6M6LlZs659kXKxlGZGkmr0ee8wbJSaeHfMvpGN1LD2xdNQVhjXF1tj7uC7xRwBSeCktI5FBKOy1GN1i6iJJT9Fi5BnWqRNGcIKS7_pc8d1va_C1keSlMHtD0voL6yS1GPj-STbhpXjn64ZDfjBxfJYlMC3XJtjEWPMDIZjZhfmRLG6MhMhPPf-g_BpZC4HN12UskaXCGF1GYHt5Ah5_8qCAOGQCna26zjHREmK6VhlHkDUCeNqQqpc3_f3hr1A2QkYCuwzwFVesREcsmQ-nONd3umMlZSQoMJ9dK8vtMXL2E7EfKAPByWDaDMcDSUuE5IfBo1lkkJyHUPKFK4AKyLr9Sb4WVvX3EFsEEICOEPeIY-P-q5oeuIT8HUJ-Vl9t8tjsSjNpr_0_sVFFC7hg_co7y7vWCpBivTdzJZbhkCZ24fadr_zPcV5ou_smpq_wtpyiBrUTCYQQM67TtpSD5AJBBhV62b4cUMr8PlvbHQuxWIXnf4pKCAxeGJqp500fLZF7de0VaZVKA31a7uqutcfW4p9jXSfeKWssYjQc56b5q4ZojOakJCXCQF8UKLp4D-TlQTIR26uZtYmbk8UM6RbVdHLAkk7QvV2E4wVQjMFYnskg7Qhy4DlGD7XZvTN0nFEb9Wb2xVxP6c0xvpUTmwhhSxc1yrqDy6lfRZ5mufpAXF809tXpSv10eyJTnyNfMxSTdEjEdGIqfIXhPtHQZgTpFzPp3vER0dzyclqKtJsukNFdkJRuP__Z6VdIq_svrzUm7-sPEffDcOyI1nHgWVEy3lqxDxUYTHiwXjq3Vf9UuPVoOPbAO1qFtfByjUOipqjEm2tuMYY2r9ia3FGqwVs_nlouyRCSRFAs_tKtFxg7lCG-ZJtuCNoQZxyOmA1yu2iWD8djrJ362lc9UV0iCS74agM6eWAfnsrcvEEkRw_6uuxOi4IUK3rPl__YSfsLgy1yN5OEo5fYjIb68_yqd9gC1DmbUgQ_1yO3t3ApJByqhFjK4gozqSOHm9d8ps2DPDBQ-9nn4Vx9mX__tHau6gcwFPWHAfBoUEs30u1J23AnSv4KgCVPFcgTN_gG2LdwZJvyG7QqIP84IXFjQG0EFfkENU-gdfoIKr9dTnGbMpEZNELtHX4c2fJi9EA4cuRFTrBF58pndnrNfhUaTsQo4ko1rWmRd6oOxTW3j6GAy8uRly2RkYVyJEhHAkA3yZ6IxZCRw1-aX-nSMyszhtg2LFx1MH60ZKEeBuM8_7fzJaGQwoon86ttf9-GbJ8DMIW7FvqOXz4B7Q63KDt9pd6MNr07rWAMUXVs6uW0JP62xUfNv0QlWMyIh0wyDOgS2aqwUgG00AkIjL6gGknfUyPxEhH5y4wzsUG-JCz84i6mF47_Ddgu5MaD6yG1zpdUcMO6qXMw3V3Km9viQDDLTdOrjuz_EIufZT2qWcs-vZkT1SVDQG9KfmZM9VGibOpzrIgUAAxxGXT8dZQ49tOJuqjrYa7jTs6HbpL-Yjs92fa6JC29zJqYIwxZnsGu0ipefpRQH6R7e52Tn-SfencS6wOrlgdVPsg61FxstsIgfZNxgVkdMH7HmfGT5Gg9RZxeBhgUE6gUQsNMNtSNZ0EnXSovq0KO98v78DZz_2zlb2dmOva3D4Ucir4gonmStfVxUiYyZhCs8ETqrleQ5GsnVNGkUhjkofFoQuvm0sze5bUZKiDG5I0JPSYpc440i13XTVBGHUQ1C8hsJLCcnMh1_lEDV6-RDZc6Qfvg7D5x3zun7TqxwnpjVuNaDcJPis_ZkZBM16eEEtSwXG7LkX5SBZrAjsGYezbXxnhYJDU9uiB60V-iUMdqrE_M8ENjkVF1_vBL_0OXNmDYzvD7wq68sIB7rp8MtptHkunkvUi7VNlKaVwSY307FuuSkVU3XzTjbt5Tg5Mg3oEbctmk5QlPNqihHKESxs5VBRrp2lZqEGRojDoc_q7
' URL: http://www.plantuml.com/plantuml/uml/fLbjRzis4FwUNo7qax8uHLDiws1qHktONWoaJU2NTkWm3BJ4n5naKg0efsxH_lRTaH95KdAIjHlGMlV6u_7kkIFxfb14gdAR7HLtZET4acsKPAGeXaf9jYuLdIM2BzXd6hqush2KHWcJIKQFZhHKDCppjuJnwCjH59ry0MEA9L-ZBP1Y8c-BVhG0C_pshx-F-z5EiFJeQwqvPHaTYtkU2PAU2wwao38gjQ7J6vKlgDonXFQZgSfNhFf2tYckrAqS7z8xHfsqaaVT-0R-u6HBQmTxKK6BWWdUZouKMj4VlKZI8XUye3LPxZAgvXNnm9wISakvgdO2b5bQhu8Ky8BA2KGeSwaezyxnHqjATiiuoJ3w_IWJXfg8RGvU5JJrwMMEcniJ1RHBaP0CVoxPDWoQyIu-Rb7QZlMYqArUr7PAMxgbQggt6XyxMpWfBDaFH1qvetbbLsvfEwosVxwLQULhfmUQ4UucyCBP6Tge0gkzS5aT4V3id7i755WAc5s7wLjRsMD5I-71eab7uc0Ej39rLTIrHiDKB875WrJCGUTUI2-H4qd1UZfK7Vb6aWGhQ9rH37unIm49BbcXNXlrWSr9zCFaelv5_VGBNUb5eIDrydLdZw7ImpcpgXPeQLf6w8AlVrsvqzAtZ9R3VgxKCJnqk8t0eN3x1eUjm6lBVkZHS8VWOuVch1JKzRXZTpbygs6M6LlZs659kXKxlGZGkmr0ee8wbJSaeHfMvpGN1LD2xdNQVhjXF1tj7uC7xRwBSeCktI5FBKOy1GN1i6iJJT9Fi5BnWqRNGcIKS7_pc8d1va_C1keSlMHtD0voL6yS1GPj-STbhpXjn64ZDfjBxfJYlMC3XJtjEWPMDIZjZhfmRLG6MhMhPPf-g_BpZC4HN12UskaXCGF1GYHt5Ah5_8qCAOGQCna26zjHREmK6VhlHkDUCeNqQqpc3_f3hr1A2QkYCuwzwFVesREcsmQ-nONd3umMlZSQoMJ9dK8vtMXL2E7EfKAPByWDaDMcDSUuE5IfBo1lkkJyHUPKFK4AKyLr9Sb4WVvX3EFsEEICOEPeIY-P-q5oeuIT8HUJ-Vl9t8tjsSjNpr_0_sVFFC7hg_co7y7vWCpBivTdzJZbhkCZ24fadr_zPcV5ou_smpq_wtpyiBrUTCYQQM67TtpSD5AJBBhV62b4cUMr8PlvbHQuxWIXnf4pKCAxeGJqp500fLZF7de0VaZVKA31a7uqutcfW4p9jXSfeKWssYjQc56b5q4ZojOakJCXCQF8UKLp4D-TlQTIR26uZtYmbk8UM6RbVdHLAkk7QvV2E4wVQjMFYnskg7Qhy4DlGD7XZvTN0nFEb9Wb2xVxP6c0xvpUTmwhhSxc1yrqDy6lfRZ5mufpAXF809tXpSv10eyJTnyNfMxSTdEjEdGIqfIXhPtHQZgTpFzPp3vER0dzyclqKtJsukNFdkJRuP__Z6VdIq_svrzUm7-sPEffDcOyI1nHgWVEy3lqxDxUYTHiwXjq3Vf9UuPVoOPbAO1qFtfByjUOipqjEm2tuMYY2r9ia3FGqwVs_nlouyRCSRFAs_tKtFxg7lCG-ZJtuCNoQZxyOmA1yu2iWD8djrJ362lc9UV0iCS74agM6eWAfnsrcvEEkRw_6uuxOi4IUK3rPl__YSfsLgy1yN5OEo5fYjIb68_yqd9gC1DmbUgQ_1yO3t3ApJByqhFjK4gozqSOHm9d8ps2DPDBQ-9nn4Vx9mX__tHau6gcwFPWHAfBoUEs30u1J23AnSv4KgCVPFcgTN_gG2LdwZJvyG7QqIP84IXFjQG0EFfkENU-gdfoIKr9dTnGbMpEZNELtHX4c2fJi9EA4cuRFTrBF58pndnrNfhUaTsQo4ko1rWmRd6oOxTW3j6GAy8uRly2RkYVyJEhHAkA3yZ6IxZCRw1-aX-nSMyszhtg2LFx1MH60ZKEeBuM8_7fzJaGQwoon86ttf9-GbJ8DMIW7FvqOXz4B7Q63KDt9pd6MNr07rWAMUXVs6uW0JP62xUfNv0QlWMyIh0wyDOgS2aqwUgG00AkIjL6gGknfUyPxEhH5y4wzsUG-JCz84i6mF47_Ddgu5MaD6yG1zpdUcMO6qXMw3V3Km9viQDDLTdOrjuz_EIufZT2qWcs-vZkT1SVDQG9KfmZM9VGibOpzrIgUAAxxGXT8dZQ49tOJuqjrYa7jTs6HbpL-Yjs92fa6JC29zJqYIwxZnsGu0ipefpRQH6R7e52Tn-SfencS6wOrlgdVPsg61FxstsIgfZNxgVkdMH7HmfGT5Gg9RZxeBhgUE6gUQsNMNtSNZ0EnXSovq0KO98v78DZz_2zlb2dmOva3D4Ucir4gonmStfVxUiYyZhCs8ETqrleQ5GsnVNGkUhjkofFoQuvm0sze5bUZKiDG5I0JPSYpc440i13XTVBGHUQ1C8hsJLCcnMh1_lEDV6-RDZc6Qfvg7D5x3zun7TqxwnpjVuNaDcJPis_ZkZBM16eEEtSwXG7LkX5SBZrAjsGYezbXxnhYJDU9uiB60V-iUMdqrE_M8ENjkVF1_vBL_0OXNmDYzvD7wq68sIB7rp8MtptHkunkvUi7VNlKaVwSY307FuuSkVU3XzTjbt5Tg5Mg3oEbctmk5QlPNqihHKESxs5VBRrp2lZqEGRojDoc_q7
' Generated on: 2026-05-27T15:04:36.221370600

@startuml class
class AppMain {
}

class FileDownloadController {
 }

class FileDocument {
  }

class User {
 }

interface FileRepository {
 }

interface UserRepository {
 }

class FtpClientHandler {
}

class FtpUiService {
}

interface FileUploadCallback {
}

class LZ78Service {
}

class Node {
}

class MyFtpServer {
}

class UserService {
 }

class WeatherService {
}

class AppNavbarLayout {
}

class HomeView {
}

class LoginView {
}

class MainView {
}

class ProfileDialog {
}

class RegisterView {
}

class RouteHelper {
}

class SessionHelper {

}

FileDownloadController *-- FtpUiService
FileRepository ..> FileDocument
UserRepository ..> User
FtpUiService *-- UserRepository
FtpUiService *-- FileRepository
FtpUiService *-- LZ78Service
FtpUiService ..> User
FtpUiService ..> FileUploadCallback
Node o-- Node
UserService *-- UserRepository
UserService ..> User
HomeView *-- FtpUiService
HomeView *-- User
LoginView ..> UserService
ProfileDialog *-- UserService
ProfileDialog *-- FtpUiService
ProfileDialog ..> User
RegisterView *-- UserService
@enduml